--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">Do I need any prior experience to join your martial arts classes?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span> Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve. </span></p>
           </li>
@@ -1036,7 +1036,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">Do I need to be in shape before starting a martial art?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time.</span></p>
           </li>
@@ -1044,7 +1044,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What's the youngest age kids can start martial arts?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
           </li>
@@ -1053,7 +1053,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What should I wear and bring to my first martial arts class?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer4" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
           </li>
@@ -1062,7 +1062,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Do you offer private lessons / group lessons?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants.</span></p>
           </li>
@@ -1070,7 +1070,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Are your instructors certified and experienced?</span>
               <img src="./images/icon-plus.svg" height="30" width="31" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="hide answer" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
           </li>
