SEO - adding missing h1 to gallery page

--- a/gallery.html
+++ b/gallery.html
@@ -185,7 +185,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="./lightbox.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Contact Golden Tiger Academy in Dunboyne for any questions, messages, or to schedule a free trial session. Whether you're a beginner or an experienced practitioner. Reach out today to get started!" />
@@ -223,6 +223,7 @@
     </header>
 
     <section class="gallery-container-outer">
+      <h1 class="gallery-title">Golden Tiger Academy Gallery</h1>
       <div class="gallery-container-inner">
         <a href="./images/gallery-1.webp" data-lightbox="pictures" data-title="Ken Byrne receiving his black belt from Gary Savage">
           <img src="./images/gallery-1.webp" alt="Ken Byrne receiving his black belt from Gary Savage" />
