--- a/gallery.html
+++ b/gallery.html
@@ -188,7 +188,7 @@
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="./lightbox.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contact Golden Tiger Academy in Dunboyne for any questions, messages, or to schedule a free trial session. Whether you're a beginner or an experienced practitioner. Reach out today to get started!" />
+    <meta name="description" content="See Golden Tiger Academy in action! Explore our image gallery to get a glimpse of our dynamic classes and friendly community." />
     <title>Gallery | Golden Tiger Academy</title>
   </head>
   <body id="gallery-body">
