SEO - Updating meta-desciptions to less than 150 characters

--- a/contact-us.html
+++ b/contact-us.html
@@ -186,7 +186,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contact Golden Tiger Academy in Dunboyne for any questions, messages, or to schedule a free trial session. Whether you're a beginner or an experienced practitioner. Reach out today to get started!" />
+    <meta name="description" content="Free First Class at Golden Tiger Academy! Contact us in Dunboyne for any questions or to schedule your trial class. All levels welcome." />
     <title>Contact Us | Golden Tiger Academy</title>
   </head>
   <body id="contact-us-body">
