SEO - Shortening page titles

--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -246,7 +246,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Try Korean Kickboxing with your first class free! Fun, dynamic classes for kids to build confidence and learn unique techniques in a supportive environment." />
-    <title>Korean Kickboxing for Kids in Dunboyne, Meath – Fun & Fitness</title>
+    <title>Korean Kickboxing Classes Dunboyne, Meath</title>
   </head>
   <body id="class-korean-kickboxing-body">
     <!-- Google Tag Manager (noscript) -->
