SEO - adding keyword to page

--- a/bjj.html
+++ b/bjj.html
@@ -298,19 +298,19 @@
 
         <div class="class-text">
           <div class="class-format">
-            <h2>Instructor</h2>
+            <h2>BJJ Instructor</h2>
             <p>Ken Byrne has over 12 years of experience in Brazilian Jiu-Jitsu. He was awarded his black belt in 2023 by Gary Savage, 3rd degree black belt.</p>
           </div>
           <div class="class-format">
-            <h2>Fundamentals Class</h2>
+            <h2>BJJ Fundamentals Class</h2>
             <p>Start your BJJ journey with our fundamentals class every Monday. Perfect for newcomers, this session covers all the fundamental moves and principles of Brazilian Jiu-Jitsu. No prior martial arts experience is required, and there's no sparring involved. Plus, it's a no-gi class, so there's no need for a BJJ GI (uniform).</p>
           </div>
           <div class="class-format">
-            <h2>Principles & Rolling</h2>
+            <h2>BJJPrinciples & Rolling</h2>
             <p>On Thursdays, we offer another class suitable for beginners and beyond. This session focuses on BJJ Principles, where techniques and fundamental principles are taught. The class concludes with light rolling sessions, providing new students with the opportunity to gain comfort and experience in rolling. This is a GI class.</p>
           </div>
           <div class="class-format">
-            <h2>Advanced Sparring Class</h2>
+            <h2>BJJ Advanced Sparring Class</h2>
             <p>On Tuesdays, we have an advanced sparring class. This No-Gi sparring session is exclusively for students who have achieved at least a two-stripe white belt in BJJ.</p>
           </div>
           <div class="class-format">
@@ -332,7 +332,7 @@
         <div class="benefits-image bjj"></div>
 
         <div class="benefits-text-container">
-          <h2>The Benefits</h2>
+          <h2>The Benefits of BJJ</h2>
           <div class="benefits">
             <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
