SEO - adding keywords to class pages

--- a/karate.html
+++ b/karate.html
@@ -298,16 +298,20 @@
 
         <div class="class-text">
           <div class="class-format">
+            <h2>Karate Instructor</h2>
+            <p>Ken Byrne, a black belt in Kenpo and Kantanni Karate with over 38 years of experience, leads our karate classes with passion and expertise. His engaging teaching style combines traditional techniques with modern methods, helping students of all levels build discipline, confidence, and respect, both on and off the mat.</p>
+          </div>
+          <div class="class-format">
             <!-- <aside class="arrow">Limited spaces available!</aside> -->
-            <h2>Kids Classes</h2>
+            <h2>Kids Karate Classes</h2>
             <p>Introduce your child to Kenpo Karate with our exciting classes designed for kids aged 5-12. Our sessions are more than just workouts; they're filled with games, laughter, and valuable lessons, providing a holistic approach to martial arts training in a supportive environment. Enroll now for September 2024. Limited spots for kids' Kenpo Karate. Contact us today!</p>
           </div>
           <div class="class-format">
-            <h2>Teens Class</h2>
+            <h2>Teens Karate Class</h2>
             <p>Transform your teen's life with our Kenpo Karate classes, tailored to meet the unique needs of ages 13-17. Through expert instruction and positive reinforcement, we empower teens to unlock their full potential and become confident, resilient individuals.</p>
           </div>
           <div class="class-format">
-            <h2>Adults Class</h2>
+            <h2>Adults Karate Class</h2>
             <p>Dive into our Kenpo Karate sessions tailored for adults. Perfect your skills, boost your fitness, and develop practical self-defense techniques in a focused, supportive environment.</p>
           </div>
         </div>
@@ -325,7 +329,7 @@
         <div class="benefits-image karate"></div>
 
         <div class="benefits-text-container">
-          <h2>The Benefits</h2>
+          <h2>The Benefits of Karate</h2>
           <div class="benefits">
             <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
