--- a/kickboxing.html
+++ b/kickboxing.html
@@ -298,8 +298,18 @@
 
         <div class="class-text">
           <div class="class-format">
-            <h2>Kickboxing Class</h2>
-            <p>Looking for a fun way to boost your child's confidence? Join our Wednesday kickboxing classes at Golden Tiger Academy in Dunboyne Led by Ken Byrne, a dedicated 3rd degree black belt, these classes are filled with exciting games and activities, making fitness enjoyable for kids and teens alike. With Ken's expert guidance, your child will not only learn kickboxing techniques but also build essential life skills. Enroll them today and watch their confidence grow!</p>
+            <h2>Kickboxing Instructor</h2>
+            <p>Ken Byrne brings over 38 years of martial arts expertise to every class. As a 3rd-degree black belt, he combines technical precision with a passion for teaching, ensuring students not only learn kickboxing techniques but also gain valuable life skills. His patient, engaging approach makes the sessions enjoyable and accessible for kids and teens of all levels.</p>
+          </div>
+
+          <div class="class-format">
+            <h2>Kids Kickboxing Class Meath</h2>
+            <p>Our kids kickboxing classes are packed with fun activities, games, and drills designed to keep children motivated and excited to learn. Under Ken’s expert guidance, kids improve their strength, coordination, and focus while developing discipline, teamwork, and self-control. These sessions provide a supportive space for kids to grow physically, mentally, and emotionally. Help your child thrive both on and off the mat. Enroll them today in our highly-rated kickboxing classes in Meath and watch their confidence soar!</p>
+          </div>
+
+          <div class="class-format">
+            <h2>Teens Kickboxing Class Meath</h2>
+            <p>For teenagers, our kickboxing classes offer a dynamic and engaging way to stay active, build confidence, and learn self-defense. These sessions focus on proper technique, fitness, and resilience while encouraging teamwork and personal growth. Ken’s experienced instruction ensures that teens feel supported, whether they’re beginners or more advanced students.</p>
           </div>
         </div>
       </div>
@@ -316,7 +326,7 @@
         <div class="benefits-image kickboxing"></div>
 
         <div class="benefits-text-container">
-          <h2>The Benefits</h2>
+          <h2>The Benefits of Kickboxing</h2>
           <div class="benefits">
             <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
