--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -298,8 +298,12 @@
 
         <div class="class-text">
           <div class="class-format">
-            <h2>Korean Kickboxing Class</h2>
-            <p>Korean style kickboxing is a dynamic kicking art and is influenced by various martial arts styles including Won Hwa Do, Taekwondo and kickboxing. Led by Ken Byrne, a 5th WonHwaDo Degree Black Belt and 3rd Degree Kickboxing black belt, our classes offer a supportive atmosphere for kids to enhance their physical fitness and self-confidence through engaging activities like warm-ups, techniques, and sparring.</p>
+            <h2>Korean Kickboxing Instructor</h2>
+            <p>Ken Byrne, a 5th Degree Black Belt in WonHwaDo and 3rd Degree Black Belt in Kickboxing, brings unparalleled expertise to every class. With over 38 years of martial arts experience, Ken is dedicated to teaching in a way that is both fun and educational. His patient and engaging approach ensures that kids of all skill levels feel welcome and encouraged to reach their full potential.</p>
+          </div>
+          <div class="class-format">
+            <h2>Kids Korean Kickboxing Class Meath</h2>
+            <p>Our Kids Korean Kickboxing classes in Meath are tailored to provide a fun and structured environment for children to learn and grow. Classes include a mix of exciting warm-ups, skill-building techniques, and controlled sparring, all designed to keep kids active and motivated. Through Ken’s expert instruction, children develop essential life skills such as discipline, self-control, and confidence while mastering the dynamic techniques of Korean kickboxing. Whether they’re complete beginners or have some experience, every child benefits from a safe and supportive setting that fosters growth both on and off the mat. Give your child the opportunity to explore the unique art of Korean kickboxing. Enroll them today in our highly-rated Kids Korean Kickboxing classes in Meath and watch them thrive!</p>
           </div>
         </div>
       </div>
