--- a/muay-thai.html
+++ b/muay-thai.html
@@ -298,7 +298,7 @@
 
         <div class="class-text">
           <div class="class-format">
-            <h2>Instructor</h2>
+            <h2>Muay Thai Instructor</h2>
             <p>At Golden Tiger Academy, we offer two Muay Thai classes each week, taking place on Mondays and Thursdays. Led by our experienced instructor, Paul Wright, a former European champion in Muay Thai, these classes provide a comprehensive training experience for individuals aged 16 and above.</p>
           </div>
           <div class="class-format">
