SEO - removing "duplicate" gallery link

--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
               <li><a href="./#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="./#faqs" class="nav-link">FAQs</a></li>
               <li><a href="./#timetable" class="nav-link">Timetable</a></li>
-              <li><a href="./gallery" class="nav-link">Gallery</a></li>
+              <li><a href="/gallery.html" class="nav-link">Gallery</a></li>
               <li><a href="./#shop" class="nav-link">Shop</a></li>
               <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
@@ -1129,7 +1129,7 @@
             </a>
           </div>
 
-          <a href="/blog" class="read-blog">check out our blog</a>
+          <a href="/blog/" class="read-blog">check out our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
