SEO -adding alt text to icons

--- a/bjj.html
+++ b/bjj.html
@@ -425,8 +425,8 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title">What should I expect in my first BJJ class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span> In your first class, you'll focus on basic techniques and movements without sparring. It's a friendly, beginner-friendly environment where you can learn at your own pace. No prior experience or special uniform (gi) is required—just wear comfortable gym clothes. </span></p>
           </li>
