--- a/kickboxing.html
+++ b/kickboxing.html
@@ -454,7 +454,7 @@
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Is Kickboxing effective for self-defense?</span>
-              <img src="./images/icon-plus.svg" alt="plus icon class="icon-plus" />
+              <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes! Kickboxing equips you with practical skills for defending yourself in real-world situations. The striking techniques, combined with improved reflexes and situational awareness, make it an effective martial art for personal safety.</span></p>
