--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -414,7 +414,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
               <span class="question-title"> What is Korean Kickboxing?</span>
               <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer1" aria-hidden="true"><span>Korean Kickboxing is a versatile martial art blending influences from Won Hwa Do, Taekwondo, and traditional kickboxing. It emphasizes fast, precise kicks and strategic footwork, making it an effective discipline for both self-defense and competitive sparring.</span></p>
           </li>
@@ -423,7 +423,7 @@
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
               <span class="question-title">What makes Korean Kickboxing unique?</span>
               <img src="./images/icon-plus.svg" alt="plus icon" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+              <img src="./images/icon-minus.svg" alt="minus icon" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>The unique blend of martial arts influences gives Korean Kickboxing its distinctive focus on dynamic kicks, fluid movements, and practical techniques. It combines the power of kickboxing with the agility of Taekwondo and the adaptability of Won Hwa Do.</span></p>
           </li>
