--- a/contact-us.html
+++ b/contact-us.html
@@ -16,6 +16,38 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <!-- Schema ContactPage -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "name": "Contact Us - Golden Tiger Academy",
+        "url": "https://goldentigeracademy.com/contact-us",
+        "mainEntity": {
+          "@type": "LocalBusiness",
+          "name": "Golden Tiger Academy",
+          "image": "https://goldentigeracademy.com/apple-touch-icon.png",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Unit 10, Dunboyne Business Park",
+            "addressLocality": "Dunboyne",
+            "addressRegion": "Co. Meath",
+            "postalCode": "A86 WR26",
+            "addressCountry": "IE"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 53.426362372312624,
+            "longitude": -6.476084822976377
+          },
+          "telephone": "+353-872333481",
+          "email": "goldentigeracademy@gmail.com",
+          "url": "https://goldentigeracademy.com/",
+          "sameAs": ["https://www.facebook.com/goldentigeracademy/", "https://www.instagram.com/kengoldentiger/"]
+        }
+      }
+    </script>
+
     <!-- Start VWO Async SmartCode -->
     <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
     <script type="text/javascript" id="vwoCode">
