--- a/muay-thai.html
+++ b/muay-thai.html
@@ -326,7 +326,7 @@
         <div class="benefits-image muay-thai"></div>
 
         <div class="benefits-text-container">
-          <h2>The Benefits</h2>
+          <h2>The Benefits of Muay Thai</h2>
           <div class="benefits">
             <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
