--- a/contact-us.html
+++ b/contact-us.html
@@ -216,7 +216,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Free First Class at Golden Tiger Academy! Contact us in Dunboyne for any questions or to schedule your trial class. All levels welcome." />
     <title>Contact Us | Golden Tiger Academy</title>
