--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -320,7 +320,7 @@
         <div class="benefits-image korean-kickboxing"></div>
 
         <div class="benefits-text-container">
-          <h2>The Benefits of Korean Kickboxing</h2>
+          <h2>The Benefits of Kickboxing</h2>
           <div class="benefits">
             <img src="./images/icon-self-defense.webp" class="class-icon" alt="self-defense icon" />
             <h3>Self-Defense</h3>
