--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
           </div>
         </div>
         <img class="hero-image-container" src="./images/hero-img.webp" width="584" height="auto" alt="Black belt throwing a white belt with a sumi gaeshi" />
+        <!-- <img class="hero-image-container" src="./images/golden-tiger-academy-logo.webp" width="584" height="auto" alt="Golden  Tiger Academy Logo" /> -->
       </section>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
