Adding Google Adsense script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9222579198944867"
+     crossorigin="anonymous"></script>
   <head>
     <!-- Google Tag Manager -->
     <script>
