--- a/contact-us.html
+++ b/contact-us.html
@@ -261,7 +261,7 @@
         <form class="form" action="https://api.web3forms.com/submit" method="POST">
           <input type="hidden" name="access_key" value="c1682ada-8ba6-43bd-9ec3-f8d292080cc2" />
 
-          <h1>Get in touch.</h1>
+          <h1>Contact Us</h1>
 
           <p>Looking to sign up for a free trial class or have questions? Send us a message and we'll get back to you as soon as possible.</p>
 
