--- a/gallery.html
+++ b/gallery.html
@@ -224,7 +224,7 @@
     </header>
 
     <section class="gallery-container-outer">
-      <h1 class="gallery-title">Golden Tiger Academy Gallery</h1>
+      <h1 class="gallery-title">Gallery</h1>
       <div class="gallery-container-inner">
         <a href="./images/gallery-1.webp" data-lightbox="pictures" data-title="Ken Byrne receiving his black belt from Gary Savage">
           <img src="./images/gallery-1.webp" alt="Ken Byrne receiving his black belt from Gary Savage" />
