--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
     <!-- Shop Section -->
  <section class="shop-section-container-outer" id="shop">
-  <h2>GTA Store</h2>
+  <h2>Shop</h2>
   <div class="testimonials-section-container-inner">
     <div class="flip-card-container">
       <!-- Card 1 -->
