adding sitemap.html to the footer

--- a/contact-us.html
+++ b/contact-us.html
@@ -310,6 +310,7 @@
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
           </div>
+          <a class="address-text" href="./sitemap.html">sitemap</a>
         </div>
 
         <div class="social-media-container">
