--- a/gallery.html
+++ b/gallery.html
@@ -262,6 +262,7 @@
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
           </div>
+          <a class="address-text" href="./sitemap.html">sitemap</a>
         </div>
 
         <div class="social-media-container">
@@ -284,7 +285,8 @@
               <span class="sr-only">Call Us Now</span>
             </a>
           </div>
-          <a href="/blog" class="read-blog">check out our blog</a>
+
+          <a href="/blog/" class="read-blog">check out our blog</a>
           <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
         </div>
       </div>
