adding review  schema to martial arts pages

--- a/bjj.html
+++ b/bjj.html
@@ -242,7 +242,7 @@
             "image": "https://goldentigeracademy.com/apple-touch-icon.png",
             "address": {
               "@type": "PostalAddress",
-              "streetAddress": "Dunboyne, Co. Meath",
+              "streetAddress": "Unit 10, Dunboyne Business Park",
               "addressLocality": "Dunboyne",
               "addressRegion": "Meath",
               "postalCode": "A86 WR26",
