--- a/kickboxing.html
+++ b/kickboxing.html
@@ -176,7 +176,7 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema Kickboxing FAQPage -->
+    <!-- Schema Kickboxing FAQPage with Testimonials -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -229,6 +229,47 @@
               "@type": "Answer",
               "text": "Absolutely! Our Wednesday kickboxing classes are specifically designed for kids and teens. With exciting games and activities, these sessions are not only fun but also help young participants develop discipline, confidence, and essential life skills under the guidance of Ken Byrne, a 3rd-degree black belt."
             }
+          }
+        ],
+        "review": [
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Edie"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "Been in Kickboxing for ten years, earned my black belt, and made great friends. Ken is a fantastic, supportive instructor. This club has boosted my confidence and self-defense skills. Highly recommend!"
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Sara"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "An amazing kickboxing class with great instructors. I've been training here for 7 years now. Highly recommend for improving fitness and learning self-defense."
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Hugh"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "Great place to train with welcoming staff, the kickboxing classes are great for kids and teenagers."
           }
         ]
       }
