--- a/korean-kickboxing.html
+++ b/korean-kickboxing.html
@@ -176,7 +176,7 @@
     </script>
     <!-- End VWO Async SmartCode -->
 
-    <!-- Schema FAQPage -->
+    <!-- Schema Korean Kickboxing FAQPage with Testimonials -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -229,6 +229,47 @@
               "@type": "Answer",
               "text": "Yes! Golden Tiger Academy offers Korean Kickboxing classes for kids, focusing on fun, fitness, and skill-building. Through warm-ups, techniques, and sparring, children develop confidence, discipline, and self-defense skills."
             }
+          }
+        ],
+        "review": [
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Niamh"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "My kids love the Korean kickboxing classes. The instructors are fantastic and the classes are fun. It's a great way for them to stay active."
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Tom"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "Such a great experience for kids! The classes are both challenging and fun, and my child has really improved their confidence."
+          },
+          {
+            "@type": "Review",
+            "author": {
+              "@type": "Person",
+              "name": "Mark"
+            },
+            "reviewRating": {
+              "@type": "Rating",
+              "ratingValue": "5",
+              "bestRating": "5"
+            },
+            "reviewBody": "They play lots of games and my child has made great friends. It’s a fantastic way to keep them active and engaged!"
           }
         ]
       }
