--- a/muay-thai.html
+++ b/muay-thai.html
@@ -187,7 +187,7 @@
         "priceRange": "€€",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "Your Full Street Address Here",
+          "streetAddress": "Unit 10, Dunboyne Business Park",
           "addressLocality": "Dunboyne",
           "addressRegion": "Co. Meath",
           "postalCode": "A86 WR26",
